Add more tree questions, and restructuring test cases.